[package]
name = "ln-websocket-proxy"
description = "Websocket-based proxy for connecting to lightning nodes and mutiny wallets"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/Mutiny-Wallet/ln-websocket-proxy"
repository = "https://github.com/Mutiny-Wallet/ln-websocket-proxy"

[lib]
name = "ln_websocket_proxy"
path = "src/lib.rs"

[[bin]]
name = "ln_websocket_proxy"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "2.1.0"

# Binary dependencies
axum = { version ="0.6.15", features = ["ws", "headers"], optional = true }
headers = { version = "0.3.8", optional = true }
tokio = { version = "^1.0", features = ["full"], optional = true }
tower-http = { version = "0.4.0", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }
bytes = { version = "1.3.0", optional = true }
bitcoin_hashes = { version = "0.11", default-features = true, optional = true }
futures = { version = "0.3.28", optional = true }

[features]
server = ["axum", "headers", "tokio", "tower-http", "tracing", "tracing-subscriber", "bytes", "bitcoin_hashes", "futures"]
